# coverwise

./: .gitignore  .npmignore  CMakeLists.txt  LICENSE  Makefile  README.md  README.npm.md  README_ja.md  biome.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  publish.yml
docs/en/: cli.md  constraints.md  cpp-api.md  examples.md  getting-started.md  glossary.md  introduction.md  js-api.md
docs/ja/: cli.md  constraints.md  cpp-api.md  examples.md  getting-started.md  glossary.md  introduction.md  js-api.md
js/: compat.test.ts  constraint.test.ts  constraint.ts  index.test.ts  index.ts  types.ts
js/pure/: adapter.ts  index.ts
src/: CMakeLists.txt  coverwise.h
src/algo/: greedy.cpp  greedy.h
src/core/: coverage_engine.cpp  coverage_engine.h  generator.cpp  generator.h
src/model/: boundary.cpp  boundary.h  constraint_ast.cpp  constraint_ast.h  constraint_parser.cpp  constraint_parser.h  error.h  generate_options.h  parameter.cpp  parameter.h  test_case.cpp  test_case.h
src/ts/: integration.test.ts
src/ts/algo/: greedy.test.ts  greedy.ts  index.ts
src/ts/core/: coverage-engine.test.ts  coverage-engine.ts  generator.test.ts  generator.ts  index.ts
src/ts/model/: boundary.ts  constraint-ast.test.ts  constraint-ast.ts  constraint-parser.ts  error.test.ts  error.ts  generate-options.test.ts  generate-options.ts  index.ts  parameter.test.ts  parameter.ts  test-case.test.ts  test-case.ts
src/ts/util/: bitset.test.ts  bitset.ts  combinatorics.test.ts  combinatorics.ts  index.ts  rng.test.ts  rng.ts  string_util.test.ts  string_util.ts
src/ts/validator/: constraint-validator.test.ts  constraint-validator.ts  coverage-validator.test.ts  coverage-validator.ts  index.ts
src/util/: bitset.cpp  bitset.h  boundary.cpp  boundary.h  combinatorics.cpp  combinatorics.h  rng.cpp  rng.h  string_util.cpp  string_util.h
src/validator/: constraint_validator.cpp  constraint_validator.h  coverage_validator.cpp  coverage_validator.h
src/wasm/: CMakeLists.txt  bindings.cpp
tests/: CMakeLists.txt
tests/algo/: greedy_test.cpp
tests/benchmark/: gen_benchmark.py
tests/core/: coverage_engine_test.cpp  generator_test.cpp
tests/integration/: benchmark_test.cpp  generate_and_validate_test.cpp
tests/model/: boundary_test.cpp  constraint_parser_test.cpp  parameter_test.cpp  test_case_test.cpp
tests/util/: bitset_test.cpp  boundary_test.cpp  combinatorics_test.cpp  rng_test.cpp
tests/validator/: constraint_validator_test.cpp  coverage_validator_test.cpp  equivalence_class_test.cpp
tests/wasm/: generate.test.ts
tools/: CMakeLists.txt  benchmark_report.cpp  main.cpp
